# riv2025-long-horizon-coding-agent-demo

./: .bedrock_agentcore.yaml.template  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPENDENCY_VERSIONS.md  Dockerfile  Dockerfile.orchestrator  Dockerfile.worker  EPCC_CODE.md  EPCC_EXPLORE.md  EPCC_PLAN.md  PRD.md  README.md  TECH_REQ.md  agent.py  aws_runner.py  bedrock_entrypoint.py  claude_code.py  claude_code_agent.py  docker-compose.yml  epcc-features.json  epcc-progress.md  install.py  orchestrator.py  package-lock.json  package.json  prompt_template.txt  pyproject.toml  requirements-dev.txt  requirements.txt  worker_main.py
.github/scripts/: check_lock_status.py  gh_utils.sh  github_utils.py  invoke_agent.py
.github/workflows/: agent-builder.yml  deploy-preview.yml  issue-poller.yml  stop-agent-on-close.yml
.serena/: project.yml
docs/how-to/: configure-github-repository.md  getting-started.md  github-mode-setup.md  setup-bedrock-provider.md
docs/patterns/: README.md  feature-list.md  progress-tracking.md  session-recovery.md  verification.md
examples/: README.md  basic-agent.py  basic-orchestrator.py  bedrock-integration.py  structured-outputs.py  with-sandbox.py
frontend-scaffold-template/: package.json
frontend-scaffold-template/src/components/ui/: chart.tsx
infrastructure/: package.json
infrastructure/lib/: claude-code-stack.ts  demo-viewer-stack.ts  ecs-cluster-stack.ts  step-functions-stack.ts
prompts/: initialization_prompt.txt  orchestrator_prompt.txt  system_prompt.txt  worker_system_prompt.txt
prompts/canopy/: BUILD_PLAN.md  system_prompt.txt
src/: __init__.py  audit.py  cloudwatch_metrics.py  config.py  error_messages.py  git_manager.py  github_integration.py  logging_utils.py  retry.py  sandbox.py  secrets.py  security.py  session_manager.py  token_tracker.py  tracing.py  worker_config.py  worker_harness.py
src/agents/: __init__.py  base.py  orchestrator.py  worker.py
src/schemas/: __init__.py  build_artifacts.py  progress_report.py  test_results.py
tests/: conftest.py  test_audit.py  test_cli.py  test_config.py  test_error_messages.py  test_github_integration.py  test_lock_status.py  test_retry.py  test_security.py  test_session_manager.py  test_tracing.py
