[project]
name = "claude-code-agent"
version = "1.0.0"
description = "Autonomous agent system that builds React applications from GitHub issues using Claude Agent SDK"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Anthropic"}
]
keywords = ["claude", "agent", "code-generation", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "claude-agent-sdk>=0.1.6",
    "boto3>=1.28.0",
    "PyGithub>=2.8.1",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "opentelemetry-api>=1.20.0",
    "aws-opentelemetry-distro>=0.13.0",
    "diagrams>=0.23.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    # Type checking
    "mypy>=1.8.0",
    "types-aiofiles>=23.0.0",
    "boto3-stubs[essential]>=1.28.0",
    # Linting and formatting
    "black>=24.0.0",
    "ruff>=0.2.0",
    # Pre-commit
    "pre-commit>=3.6.0",
]

[project.scripts]
claude-code = "agent:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ============================================================================
# pytest configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
    "asyncio: marks tests as async",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    # Omit modules not yet covered by tests
    "src/github_integration.py",
    "src/git_manager.py",
    "src/session_manager.py",
    "src/cloudwatch_metrics.py",
    "src/token_tracker.py",
    "src/logging_utils.py",
    "src/prompt_templates.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 60
show_missing = true

# ============================================================================
# mypy configuration
# ============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Gradual adoption - strict on new code, relaxed on legacy
[[tool.mypy.overrides]]
module = [
    "agent",
    "aws_runner",
    "install",
]
# Allow legacy entry points to have less strict typing initially
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "claude_agent_sdk.*",
    "diagrams.*",
    "questionary.*",
    "github.*",
    "opentelemetry.*",
    "aws_opentelemetry_distro.*",
]
ignore_missing_imports = true

# ============================================================================
# black configuration
# ============================================================================
[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | __pycache__
    | build
    | dist
    | generated-app
)/
'''

# ============================================================================
# ruff configuration
# ============================================================================
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "ARG001", # unused function argument (common in hooks)
    "ARG004", # unused static method argument (hook signatures require consistent params)
    "PTH",    # pathlib suggestions - prefer explicit os.path for now (gradual adoption)
    "SIM102", # nested if - sometimes clearer as separate conditions
    "SIM108", # ternary - sometimes less readable
    "C401",   # unnecessary generator - prefer explicit list/set comprehensions
    "RUF013", # implicit Optional - will fix with F002 type hints
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002", "S101"]  # Allow assert and unused args in tests (fixtures)
"__init__.py" = ["F401", "F403"]  # Allow unused imports and star imports in __init__
"aws_runner.py" = ["B007", "RUF001"]  # Unused loop var, emoji in strings
"src/github_integration.py" = ["ARG002", "SIM105", "SIM115"]  # Unused arg, suppress pattern, file handle
"src/logging_utils.py" = ["SIM115"]  # File handle intentionally kept open

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2
